bootstrap/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - argocd.192-168-1-240.sslip.io
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
